Sidebar: add attribute `data-menu-scrollbar=true|false`. Attribute enable or disable scrollbar in the sidebar menu, issue #1528

--- a/test/metro/css/metro-all.css
+++ b/test/metro/css/metro-all.css
@@ -1,7 +1,7 @@
 /*
  * Metro 4 Components Library v4.3.7  (https://metroui.org.ua)
  * Copyright 2012-2020 Sergey Pimenov
- * Built at 09/05/2020 10:57:40
+ * Built at 09/05/2020 11:05:11
  * Licensed under MIT
  */
 *,
@@ -32893,11 +32893,7 @@ input.input-small:-ms-input-placeholder {
   overflow-y: auto;
 }
 .sidebar-menu.hide-scroll {
-  -ms-overflow-style: -ms-autohiding-scrollbar;
-  overflow: -moz-scrollbars-none;
-}
-.sidebar-menu.hide-scroll::-webkit-scrollbar {
-  display: none!important;
+  width: calc(100% + 18px);
 }
 .sidebar-menu li {
   color: inherit;
